# Luma-CL

./: .gitignore  .replit  Cargo.toml  LUMA_COMPLETE_DOCUMENTATION.md  README.md  comprehensive_phase1_test.luma  replit.md  simple_test.luma  test_error_lines.luma  test_line_numbers.luma  test_simple_comment.luma  test_with_comments.luma  user_test.luma
attached_assets/: Pasted---1750378933279_1750378933279.txt  Pasted---1750380403169_1750380403170.txt  Pasted--B-1750379471260_1750379471261.txt  Pasted--Luma--1750413085003_1750413085004.txt  Pasted--Luma-Bytecode-VM--1750379181523_1750379181525.txt  Pasted--Warning-Error--1750380397680_1750380397680.txt  Pasted--warnings--1750411388444_1750411388447.txt
examples/: arithmetic.luma  bytecode_vm_phase1.luma  bytecode_vm_phase2.luma  control_flow.luma  hello.luma  performance_test.luma  variables.luma  vm_basic_test.luma
scripts/: benchmark.sh  run_examples.sh  run_tests.sh
src/: lib.rs  main.rs
src/backend/: mod.rs
src/backend/jit/: analysis.rs  jit_compiler.rs  mod.rs
src/backend/vm/: instruction.rs  mod.rs  stack.rs  vm.rs
src/ffi/: c_api.rs  mod.rs
src/frontend/: ast.rs  compiler.rs  lexer.rs  mod.rs  parser.rs  token.rs
src/shared/: chunk.rs  error.rs  mod.rs  value.rs
tests/: test_comments.luma  test_core_vm.luma  test_jit_hotspots.luma  vm_test.rs
web/: index.html  server.py  simple_server.py
