[package]
name = "luma-lang"
version = "0.2.0"
edition = "2021"
description = "Luma JIT-VM Language with LLVM Backend"
authors = ["Luma Dev Team"]

[lib]
name = "luma"
path = "src/lib.rs"

[[bin]]
name = "luma"
path = "src/main.rs"

[dependencies]
# Core utilities
hashbrown = "0.14"
smallvec = "1.11"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization (for bytecode caching)
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
